fix overflow and postion

--- a/project/assets/css/home.css
+++ b/project/assets/css/home.css
@@ -2,7 +2,6 @@
 @import url(./global.css);
 
 /*styling about section*/
-
 .about {
   display: flex;
   flex-direction: column;
@@ -10,6 +9,36 @@
   min-width: 100%;
   height:auto;
   margin: auto;
+  position: relative;
+  height: 50rem;
+  overflow: hidden;
+  clear: both;
+}
+/* Slideshow container */
+.slideshow-container {
+  min-width: 100%;
+  position: absolute;
+ }
+/*content-container*/
+.content-container{
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  display:flex;
+  top: 50px;
+  left: 50px;
+  z-index: 1;
+ }
+
+/*text-container*/
+.text-container{
+  display: flex;
+  flex-direction: space-evenly;
+  color: #f2f2f2;
+  background-color: var(--asphalt);;
+  padding: 2rem;
+  border-radius: 1rem;
+  max-width: 60%;
 }
 
 .mySlides {
@@ -23,46 +52,20 @@ img {
   max-height: 100%;
 }
 
-/* Slideshow container */
-
-.slideshow-container {
-  min-width: 100%;
- }
-
-
-/* Caption text */
-.text-container{
-  display: flex;
-  flex-direction: row;
-  color: #f2f2f2;
-  background-color: var(--asphalt);;
-  padding: 2rem;
-  margin-left: 3rem;
-  max-width: 50%;
-  border-radius: 1rem;
-}
 
 .divider{
   background-color: white;
-  margin: 0.5rem;
-  min-width: 3px;
-  min-height: 300px;
+  margin: 1rem;
+  min-width: 0.2rem;
   border-radius: 1rem;
-  margin:1rem;
 }
 
 .about-title{
   font-size: 1rem;
   font-weight: 500;
   margin: 1rem;
-  max-width: 50%;
 }
 
-.about-title .span{
-  font-size: 3rem;
-  padding: 1rem;
-  text-align: center;
-}
 .socials-card{
   display:flex;
   justify-content: space-between;
@@ -77,6 +80,16 @@ img {
   border-radius: 1rem;
 }
 
+span{
+  padding: 1rem;
+  margin:0px;
+  text-align: center;
+}
+p{
+  font-size:1.5rem;
+  padding:1rem;
+}
+
 
 /* The dots/bullets/indicators */
 .dot {
@@ -84,25 +97,16 @@ img {
   height: 15px;
   width: 15px;
   margin: 0 2px;
-  background-color: #bbb;
+  background-color: rgb(9, 9, 9);
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
 }
 
 
-span{
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-p{
-  font-size:1.5rem;
-  padding:1rem;
-}
-
 .active,
 .dot:hover {
-  background-color: #717171;
+  background-color: var(--asphalt);
 }
 
 /* Fading animation */
@@ -165,23 +169,55 @@ p{
 
 /* On smaller screens, decrease text size */
 
-@media only screen and (min-width: 768px) {
-    .text-container {
+@media only screen and (min-width: 576px) {
+.text-container{
       min-width: 50%;
       margin: auto;
-    }.about-title {font-size: 3rem}
-  .p{font-size: 1.5rem;}
+    }
+.divider{
+  min-width: 0.1rem;
+}
+.content-container p{font-size: 2.5rem;}
 .dot{
  height: 10px;
   width: 10px;
 }
+.content-container span{
+  font-size: 1.5rem;
+padding: 0rem;
+margin :0rem;}
+.content-container p{font-size: 0.6rem;}
+
 }
 
-@media only screen and (min-width: 992px) {
-  .text-container{
-    min-width: 40%;
-    margin: 3rem}
+/*small screens*/
+@media only screen and (min-width: 768px) {
+.text-container{
+    min-width: 60%;
+    margin-left:auto;}
+.content-container span{font-size: 2.3rem;
+margin:0px;}
+.content-container p{font-size: 1.0rem;}
 }
+
+/*large screens*/
+@media only screen and (min-width: 992px) {
+.text-container{
+    min-width: 60%;
+    margin-left: 3rem}
+.content-container span{font-size: 2.5rem;}
+.content-container p{font-size:1.5rem;}
+}
+
+/*extra large screens*/
+@media only screen and (min-width: 1200px) {
+  .text-container{
+    max-width: 40%;
+    margin-left: 4rem}
+.content-container span{font-size: 4rem;}
+.content-container p{font-size: 1.8rem;}
+}
+
 
 
 
